fix: merubah gap menu dine-in dan reservation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,12 +60,12 @@
 }
 
 .booking{
-    margin: 30px;
+    margin: 40px 5px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
 }
 
 .reservation{
@@ -88,7 +88,7 @@
 
 .reservation a {
     padding: 10px;
-    margin-left: 40%;
+    margin-left: 45%;
     color: #FFF3E4;
     background-color: #483434;
     border: 2px solid #FFF3E4;
@@ -115,7 +115,7 @@
 
 .dine a {
     padding: 10px;
-    margin-left: 40%;
+    margin-left: 45%;
     color: #FFF3E4;
     background-color: #483434;
     border: 2px solid #FFF3E4;
